--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -13,7 +13,7 @@ Here's how to load the dataset into R, and to check if there is any necessary tr
 Since the file contains comma separated values (csv), **read.csv()** function is used. 
 We would like to have the data in a long form, where observations are represented by a row and each column has a meaningful name. It is useful to use **head()**, **dim()** and **names()** functions to understand the basics of the dataset.
 
-```{r Load Data, echo=TRUE}
+```{r Load Data, echo=TRUE, warning=FALSE}
         unzip(zipfile="activity.zip")
         myDataset <- read.csv("activity.csv")
         head (myDataset)
